// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hoists function call 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"c1r9f2e5\\"
  }
};

const _foo = foo();

_foo ? \\"c1r9f2e5 \\" : \\"\\";"
`;

exports[`mixed 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"c1r9f2e5\\",
    opacity: \\"cu2kwdz\\"
  },
  red: {
    color: \\"cyyg6ey\\"
  }
};
\\"cyyg6ey \\" + (foo ? \\"cu2kwdz \\" : \\"\\");"
`;

exports[`moves test 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"c1r9f2e5\\"
  }
};

const _foo = foo();

_foo ? \\"c1r9f2e5 \\" : \\"\\";"
`;

exports[`object 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"c1r9f2e5\\",
    opacity: \\"cu2kwdz\\"
  },
  red: {
    color: \\"cyyg6ey\\"
  }
};
(bar ? \\"cyyg6ey \\" : foo ? \\"c1r9f2e5 \\" : \\"\\") + (foo ? \\"cu2kwdz \\" : \\"\\");"
`;

exports[`property access 1`] = `
"import style9 from 'style9';
const styles1 = {
  default: {
    color: \\"c1r9f2e5\\"
  }
};
const styles2 = {
  red: {
    color: \\"cyyg6ey\\"
  }
};
style9(styles1.default, styles2.red);"
`;

exports[`string literals 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"c1r9f2e5\\",
    opacity: \\"cu2kwdz\\"
  },
  red: {
    color: \\"cyyg6ey\\"
  }
};
\\"cyyg6ey \\" + \\"cu2kwdz \\";"
`;

exports[`supports destructuring assignment 1`] = `
"import style9 from 'style9';
const {
  blue
} = {
  blue: {
    color: \\"c1r9f2e5\\"
  }
};
console.log(blue);"
`;

exports[`supports member expression access 1`] = `
"import style9 from 'style9';
const blue = {
  blue: {
    color: \\"c1r9f2e5\\"
  }
}.blue;
console.log(blue);"
`;

exports[`ternary 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"c1r9f2e5\\",
    opacity: \\"cu2kwdz\\"
  },
  red: {
    color: \\"cyyg6ey\\"
  }
};
(foo ? \\"c1r9f2e5 \\" : \\"cyyg6ey \\") + (foo ? \\"cu2kwdz \\" : \\"\\");"
`;
